--- a/Pages/About.html
+++ b/Pages/About.html
@@ -3,52 +3,52 @@
 <head>
     <meta charset="UTF-8" />
     <title>About</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> --->
 </head>
 <body>
   <header>
     <nav class="navi">
-        <ul>
-    <li class="about"><a href="Pages/About.html">About</a></li>
-    <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
-</ul>
-</nav>
-
-<h1>Name Name</h1>
-</header>
-  
- <!-- <video controls width="" height="300" >
-    <source src="https://cdn.pixabay.com/video/2020/07/24/45457-443244028_large.mp4">
-    <source src="">
-    Your browser does not support this video. 
-  </video>
-  --->
+      <ul>
+        <li class="about"><a href="Pages/About.html">About</a></li>
+        <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+      </ul>
+    </nav>
+    <h1>Daniel Harman</h1>
+  </header>
   <main>
+    <img src="../assets/pexels-olly-3785079 (1).jpg" alt="Profile photograph">
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim earum
-         ipsam mollitia debitis illum laboriosam cumque obcaecati, quidem eligendi
-          maxime provident ab, est eaque quaerat ea praesentium dicta. Dolorem.
-    Quibusdam dignissimos earum unde velit vitae qui sit, nihil reiciendis quod
-     inventore eius modi voluptatum quia saepe error tempore consequatur doloremque
-      molestias accusantium. Velit similique corporis fugit consectetur officia 
-      veniam.
-    Sapiente in, sunt aliquid quae maiores repellendus molestias eveniet placeat
-     quos labore animi similique molestiae sint enim, minima quam quis illum 
-     doloremque quia. Culpa rerum exercitationem quo totam modi ut?
-    Rem placeat soluta optio et omnis dolorem perspiciatis impedit enim magni 
-    adipisci, expedita numquam voluptates unde deleniti delectus quae corporis
-     animi, iure perferendis. Excepturi dolor magni temporibus reiciendis
-      consequatur quia!
-    Obcaecati, quidem! Quam vero debitis voluptates dignissimos! Obcaecati 
-    labore ad laboriosam accusantium delectus perspiciatis. Eligendi dolorem 
-    ad dignissimos veniam impedit voluptas libero itaque nulla delectus sit eius
-     quia, mollitia nam.</p>
+          ipsam mollitia debitis illum laboriosam cumque obcaecati, quidem eligendi
+            maxime provident ab, est eaque quaerat ea praesentium dicta. Dolorem.
+      Quibusdam dignissimos earum unde velit vitae qui sit, nihil reiciendis quod
+      inventore eius modi voluptatum quia saepe error tempore consequatur doloremque
+        molestias accusantium. Velit similique corporis fugit consectetur officia 
+        veniam.
+      Sapiente in, sunt aliquid quae maiores repellendus molestias eveniet placeat
+      quos labore animi similique molestiae sint enim, minima quam quis illum 
+      doloremque quia. Culpa rerum exercitationem quo totam modi ut?
+      Rem placeat soluta optio et omnis dolorem perspiciatis impedit enim magni 
+      adipisci, expedita numquam voluptates unde deleniti delectus quae corporis
+      animi, iure perferendis. Excepturi dolor magni temporibus reiciendis
+        consequatur quia!
+      Obcaecati, quidem! Quam vero debitis voluptates dignissimos! Obcaecati 
+      labore ad laboriosam accusantium delectus perspiciatis. Eligendi dolorem 
+      ad dignissimos veniam impedit voluptas libero itaque nulla delectus sit eius
+      quia, mollitia nam.  
+    </p>
   </main>
   <!--FINISH THE EXHIBITION THINGS-->
   <aside>
-    <h3>Exhibitions or something</h3>
-    <div>
-      <h4></h4>
-      <p></p>
-    </div>
+    <h4>Up Coming Exhibitions</h4>
+      <ul>
+        <li>2025 Blah blah Exhibition, Lisson Gallery</li>
+      </ul>
+    <h4>Past Exhibitions</h4>
+      <ul>
+        <li>2024 Blah Blah Exhibtion, Gallery</li>
+        <li>2024 Blah Blah Exhibtion, Gallery</li>
+      </ul>
   </aside>
 </body>
 </html>
