--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -3,44 +3,38 @@
 <head>
     <meta charset="UTF-8" />
     <title>Enquiries</title>
+    <link rel="stylesheet" href="../CSS/Style.css">
 </head>
 <body>
     <header>
         <nav class="navi">
             <ul>
-        <li class="about"><a href="Pages/About.html">About</a></li>
-        <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
-    </ul>
-</nav>
-
-<a href="index.html"><h1 class="signture">Daniel Harman</h1></a>
-</header>
+                <li class="about"><a href="Pages/About.html">About</a></li>
+                <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <a href="index.html"><h1 class="signture">Daniel Harman</h1></a>
+    </header>
     <!-- need to put in links to  instagram, links need to head to new pages-->
-     <form method="post">
+    <form method="post">
         <label for="fname"></label>
-        <input type="text" id="fname" name="fname" placeholder="First Name">
+        <input class="cform" type="text" id="fname" name="fname" placeholder="First Name">
      <br>
      <br>
         <label for="sname"></label>
-        <input type="text" id="sname" name="sname" placeholder="Surname">
+        <input class="cform" type="text" id="sname" name="sname" placeholder="Surname">
     <br>
     <br>
         <label</label>
-        <input type="email" id="email" name="email" placeholder="Email">
+        <input class="cform" type="email" id="email" name="email" placeholder="Email">
     <br>
     <br>
         <label for="add-info"></label>
-        <textarea id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information" required></textarea>
-        <br>
-        <br>
-
-<!---Add a checkbox?? Tick how you would prefer to be contacted?-->
-
+        <textarea class="cform" id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information" required></textarea>
+    <br>
+    <br>
         <label for="submit"></label>
-        <input type="submit">
-
-
-
-     </form>
+        <input class="cform" type="submit" value="Submit">
+    </form>
 </body>
 </html>
