--- a/Pages/Project one.html
+++ b/Pages/Project one.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Style.css">
     <title>ProjectOne</title>
 </head>
-<body>
-    <h2>Project One</h2>
+<body class="container">
+    <header>
+        <nav>
+            <h1><a href="../index.html" class="signature">Daniel Harman</a></h1>
+            <ul>
+                <li class="about"><a href="../Pages/About.html">About</a></li>
+                <li class="contact"><a href="../Pages/Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
         Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
