--- a/Pages/Project two.html
+++ b/Pages/Project two.html
@@ -2,9 +2,22 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/Style.css">
+<!--source this -->
     <title>ProjectTwo</title>
 </head>
-<body>
+<body class="container">
+        <header>
+            <nav>
+                <h1><a href="../index.html" class="signature">Daniel Harman</a></h1>
+                <ul>
+                    <li class="about"><a href="./About.html">About</a></li>
+                    <li class="contact"><a href="./Contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
     <h2>Project Two</h2>
     <main>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
