Changed from css media queries to bootstrap grid system for presentation layout.  Fixed formatting issues across all pages. Removed borders from css.

--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -8,16 +8,29 @@
     <title>Enquiries</title>
 </head>
 <body class="container">
-    <header>
-        <nav>
-            <a href="index.html"><h1 class="signture">Daniel Harman</h1></a>
-            <ul>
-                <li class="about"><a href="../Pages/About.html">About</a></li>
-                <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
-            </ul>
-        </nav> 
-    </header>
+    <div class="row">
+        <header>
+            <nav>
+                <div class="col-lg-auto">
+                <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                </div>
+                <div class="col-lg-auto">                   
+                <ul>
+                     <li class="about"><a href="Pages/About.html">About</a></li>
+                    <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
     <!-- need to put in links to  instagram, links need to head to new pages-->
+     <div class="row">
+        <div class="col">
+            <p>For commissions, inquiries, or to learn more about upcoming exhibitions, please contact</p>
+        </div>
+     </div>
+    <div class="row">
+    <div class="col">
     <form method="post">
         <label for="fname"></label>
         <input class="cform" type="text" id="fname" name="fname" placeholder="First Name">
@@ -38,6 +51,8 @@
         <label for="submit"></label>
         <input class="cform" type="submit" value="Submit">
     </form>
+    </div>
+    </div>
     <footer>
         <div>
             <br>
