--- a/Pages/Project two.html
+++ b/Pages/Project two.html
@@ -9,26 +9,50 @@
     <title>ProjectTwo</title>
 </head>
 <body class="container">
+    <div class="row">
         <header>
             <nav>
-                <h1><a href="../index.html" class="signature">Daniel Harman</a></h1>
-                <ul>
-                    <li class="about"><a href="./About.html">About</a></li>
-                    <li class="contact"><a href="./Contact.html">Contact</a></li>
-                </ul>
+                <div class="col-lg-auto">
+                    <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                </div>
+                <div class="col-lg-auto">                   
+                    <ul>
+                        <li class="about"><a href="Pages/About.html">About</a></li>
+                        <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                    </ul>
+                </div>
             </nav>
         </header>
+    </div>
     <h2>Project Two</h2>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-            Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-            Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-            Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-            Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem.
-        </p>
-            <img src="https://images.unsplash.com/photo-1525972757199-cf2ad7cc4f4b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of two cups arranged together.">
-            <img src="https://images.unsplash.com/photo-1525974160448-038dacadcc71?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="A photograph of three ceramic vessels.">
-            <img src="https://images.unsplash.com/photo-1523367662635-ec427c441fe6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of several small milk jugs grouped together.">
+        <div class="row">
+            <div class="col-6">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
+                Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
+                Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
+                Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
+                Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem. 
+                </p>
+            </div>
+        </div>
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="two-image">
+                        <img src="https://images.unsplash.com/photo-1525972757199-cf2ad7cc4f4b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of two cups arranged together.">
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="two-image">
+                        <img src="https://images.unsplash.com/photo-1525974160448-038dacadcc71?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="A photograph of three ceramic vessels.">
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="two-image">
+                        <img src="https://images.unsplash.com/photo-1523367662635-ec427c441fe6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of several small milk jugs grouped together.">
+                    </div>
+                </div>
+            </div>
     </main>   
     <footer>
         <a href="https://www.instagram.com/" target="_blank">
