--- a/Pages/Project one.html
+++ b/Pages/Project one.html
@@ -8,25 +8,49 @@
     <title>ProjectOne</title>
 </head>
 <body class="container">
-    <header>
-        <nav>
-            <h1><a href="../index.html" class="signature">Daniel Harman</a></h1>
-            <ul>
-                <li class="about"><a href="../Pages/About.html">About</a></li>
-                <li class="contact"><a href="../Pages/Contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="row">
+        <header>
+            <nav>
+                <div class="col-lg-auto">
+                    <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                </div>
+                <div class="col-lg-auto">                   
+                    <ul>
+                        <li class="about"><a href="Pages/About.html">About</a></li>
+                        <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
     <main>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-        Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-        Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-        Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-        Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem.</p>
-        <img src="../assets/pexels-kayaartss-28486140.jpg" alt="">
-        <img src="../assets/pexels-kayaartss-28486233.jpg" alt="">
-        <img src="../assets/pexels-kayaartss-28486224.jpg" alt="">
-        <img src="../assets/pexels-kayaartss-28486232.jpg" alt="">
+        <div class="row">
+            <div class="col-6">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
+                Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
+                Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
+                Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
+                Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem. 
+                </p>
+            </div>
+        </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="one-image">
+                        <img src="../assets/pexels-kayaartss-28486140.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="one-image">
+                        <img src="../assets/pexels-kayaartss-28486224.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="one-image">
+                        <img src="../assets/pexels-kayaartss-28486232.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                    </div>
+                </div>
+            </div>
     </main>
     <footer>
         <a href="https://www.instagram.com/" target="_blank">
