Removed <br> tags from contact page. Added a label for email input.

--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -34,20 +34,12 @@
     <form method="post">
         <label for="fname"></label>
         <input class="cform" type="text" id="fname" name="fname" placeholder="First Name">
-     <br>
-     <br>
         <label for="sname"></label>
         <input class="cform" type="text" id="sname" name="sname" placeholder="Surname">
-    <br>
-    <br>
-        <label</label>
+        <label for="email"></label>
         <input class="cform" type="email" id="email" name="email" placeholder="Email">
-    <br>
-    <br>
         <label for="add-info"></label>
         <textarea class="cform" id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information" required></textarea>
-    <br>
-    <br>
         <label for="submit"></label>
         <input class="cform" type="submit" value="Submit">
     </form>
