--- a/Pages/Project two.html
+++ b/Pages/Project two.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Style.css">
 <!--source this -->
-    <title>ProjectTwo</title>
+    <title>DanielHarman.ProjectTwo</title>
 </head>
 <body class="container">
     <div class="row">
