--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--need to do meta data things-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/Style.css">
-    <title>Portfolio</title>
+    <title>DanielHarman.Portfolio</title>
 </head>
 <body>
 <div class=".container">
