On project one - edited image links with new image titles. Added new page title. Added to css - margin-top to project .one-images.

--- a/Pages/Project one.html
+++ b/Pages/Project one.html
@@ -26,31 +26,36 @@
     <main>
         <div class="row">
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-                Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-                Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-                Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-                Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem. 
+                <h2>Project One</h2>
+                <p>This project explores the interplay of form, texture, and tactile experience in ceramic art. Drawing inspiration from natural patterns and organic structures, I sought to create a series of sculptural vessels that evoke both visual and emotional responses. The project combines handbuilding and wheel throwing techniques, allowing for dynamic contrasts in texture and volume. 
+                    Each piece features hand-carved surfaces, soft organic curves, and tactile details that invite interaction. The surface treatment is integral to the work, where glazes and underglazes were layered to create depth, transitioning from matte to glossy finishes. Textural elements, such as imprints and hand-drawn markings, reference the natural world—mimicking the 
+                    grain of wood, the patterns of stone, or the folds of organic matter.
                 </p>
             </div>
         </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/pexels-kayaartss-28486140.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/singular medium coral vase, green glaze, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/pexels-kayaartss-28486224.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/singular coral vase, red glaze, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/pexels-kayaartss-28486232.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/large coral style design vase, green glaze, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="one-image">
+                        <img src="../assets/singular small coral vase, green, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                    </div>
+                </div>
     </main>
     <footer>
         <a href="https://www.instagram.com/" target="_blank">
