--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -31,7 +31,7 @@
      </div>
     <div class="row">
     <div class="col">
-    <form method="post">
+    <form method="post" action="https://formdump.codeinstitute.net">
         <label for="fname"></label>
         <input class="cform" type="text" id="fname" name="fname" placeholder="First Name">
         <label for="sname"></label>
