Altered the width and width-max in css for header and nav for layout presentation.  Fixed anchored images links on index page with the new image names.

--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
     <main>
         <div class="row justify-content-center">
             <div class="col-lg-auto">
-                <img id="cover" src="assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="photograph of a blue vase">
+                <img id="cover" src="assets/blue vase, cover photo.jpg" alt="photograph of a blue vase">
             </div>
             </div> 
             <div class="row justify-content-lg-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project one.html"><img src="assets/pexels-kayaartss-28486224.jpg" alt="A photograph of a organic red vase"></a>
+                        <a href="Pages/Project one.html"><img src="assets/singular coral vase, red glaze, white backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
                         <h3>Project One</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project two.html"><img src="assets/tom-crew-INY4JowWde4-unsplash.jpg" alt="A photograph of two ceramic mugs."></a>
+                        <a href="Pages/Project two.html"><img src="assets/two ceramic white mugs.jpg" alt="A photograph of two ceramic mugs."></a>
                         <h3>Project Two</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project three.html"><img src="assets/oriento-6HYqdm0CniQ-unsplash.jpg" alt="ijhfkslnd"></a>
+                        <a href="Pages/Project three.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="ijhfkslnd"></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project four.html"><img src="assets/pexels-kayaartss-14563675.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml"></a>
+                        <a href="Pages/Project four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml"></a>
                         <h3>Project Four</h3>
                     </div>
                     </div>
