Set meta viewport tag to project pages three and four.  Edited paragraph contents for projects two and three. Fixed image tag for profile photo on about page. Deleted a <p> tag from project three, alter remaining <p> contents from lorem to text. Tested and fixed anchor links on project one page.

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -27,7 +27,7 @@
   <main>
     <div class="row">
       <div class="col-lg-6">
-      <img class="profile" src="../assets/pexels-olly-3785079 (1).jpg" alt="Profile photograph">
+      <img class="profile" src="../assets/profile picture.jpg" alt="Profile photograph">
       </div>
       <div class="col-lg-6">
         <aside class="Exhibition">
