--- a/Pages/Project two.html
+++ b/Pages/Project two.html
@@ -28,11 +28,12 @@
     <main>
         <div class="row">
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-                Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-                Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-                Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-                Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem. 
+                <p>One of the most unique qualities of ceramics is its ability to function in both the practical and the artistic spheres. For centuries, ceramic objects have 
+                    served as everyday tools—vessels for storing food and liquids, pots for cooking, bowls, plates, and cups. But over time, the appreciation of these objects evolved 
+                    beyond their utility. Pottery became a symbol of cultural identity, craftsmanship, and innovation.
+                    In the hands of modern ceramicists, functional pottery is often transformed into fine art. Artists design mugs, 
+                    teapots, and vases with a sensitivity to form and aesthetics, creating objects that are as much about visual pleasure as they are about utility. Whether it’s a beautifully 
+                    thrown mug that fits comfortably in the hand or a sculptural vase with flowing lines, functional ceramics continue to bridge the gap between everyday life and artistic expression.
                 </p>
             </div>
         </div>
