--- a/Pages/Project three.html
+++ b/Pages/Project three.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Style.css">
     <title>DanielHarman.ProjectThree</title>
@@ -24,48 +25,34 @@
     </div>
     <main>
         <div class="row">
-            <h2>Project Three</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, 
-            eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates
-             praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-            Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam.
-             Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi
-              alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-            Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime 
-            doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam 
-            itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-            Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel 
-            repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia 
-            reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-            Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, 
-            consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto
-             unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem.
-            </p>
-        </div>
-        <div class="row">
             <div class="col-6">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit corporis autem, eaque veniam cupiditate veritatis quaerat magnam voluptas facere assumenda voluptates praesentium eveniet, tenetur molestiae, fuga sunt? Praesentium, quaerat amet.
-                Eveniet id porro provident nulla laboriosam excepturi inventore cupiditate quam. Recusandae ducimus, reprehenderit pariatur ratione beatae provident hic magni nisi alias. In atque, veniam est accusantium culpa provident. Suscipit, debitis.
-                Corrupti odio ab accusamus eligendi dicta eum voluptatem nesciunt! Architecto maxime doloremque accusamus illum quis voluptatem perspiciatis iusto sequi? Nesciunt ullam itaque, corporis tempore necessitatibus dolorum quisquam cupiditate nihil commodi?
-                Placeat aperiam officia ducimus praesentium facilis exercitationem labore vel repellendus minima autem iure culpa est animi eveniet possimus totam, mollitia reiciendis expedita vero esse at. Quas aliquid qui sapiente distinctio?
-                Delectus itaque dolorem deserunt a? Tempora mollitia quae, commodi eaque nam, consectetur aspernatur, maxime est vero enim exercitationem nesciunt nobis architecto unde qui eum ab deserunt. Vitae reiciendis nisi voluptatem. 
+                <h2>Project Three</h2>
+                <p>For many ceramic artists, the inspiration behind their work is rooted in the natural world. Clay itself is an 
+                    organic material—one that comes from the earth and transforms through heat and time. The textures, forms, and 
+                    colors that appear in nature often influence the design and aesthetic choices made by the artist. The idea of 
+                    creating "organic" forms in ceramics speaks to a deeper connection between the artist, the material, and the environment.
+                    In sculptural ceramics, artists may mimic the flowing curves of a tree branch, the texture of a weathered stone, 
+                    or the rippling surface of water. Handbuilding techniques, in particular, allow for the creation of irregular, asymmetrical 
+                    shapes that echo the unpredictability of nature. For many artists, this organic approach to ceramics is not just about the 
+                    visual outcome but also about the experience of working with clay—allowing it to speak for itself, following its natural 
+                    tendencies to form and bend as it is shaped.
                 </p>
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-2">
                 <div class="three-image">
-                    <img src="../assets/oriento-6HYqdm0CniQ-unsplash.jpg" alt="">
+                    <img src="../assets/blue vase with flower arrangement on a white backdrop.jpg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="three-image">
+                    <img src="../assets/blue vase, cover photo.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-3">
                 <div class="three-image">
-                    <img src="../assets/oriento-l0ah3UBLppo-unsplash.jpg" alt="">
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <div class="three-image">
-                    <img src="../assets/oriento-AWkMRde9BmU-unsplash.jpg" alt=""> 
+                    <img src="../assets/blue vase with flowers on a grey backdrop.jpg" alt=""> 
                 </div>
             </div>
         </div>
