--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <
 <!--source this -->
 <!--need to do meta data things-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -47,7 +48,7 @@
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project three.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="ijhfkslnd"></a>
+                        <a href="Pages/Project three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="ijhfkslnd"></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
