--- a/Pages/Project four.html
+++ b/Pages/Project four.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <nav>
-            <h1><a href="index.html" class="signature">Daniel Harman</a></h1>
+            <h1><a href="../index.html" class="signature">Daniel Harman</a></h1>
             <ul>
-                <li class="about"><a href="Pages/About.html">About</a></li>
-                <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                <li class="about"><a href="./about.html">About</a></li>
+                <li class="contact"><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
