--- a/Pages/Project two.html
+++ b/Pages/Project two.html
@@ -13,12 +13,12 @@
         <header>
             <nav>
                 <div class="col-lg-auto">
-                    <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                    <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
                 </div>
                 <div class="col-lg-auto">                   
                     <ul>
-                        <li class="about"><a href="Pages/About.html">About</a></li>
-                        <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                        <li class="about"><a href="./about.html">About</a></li>
+                        <li class="contact"><a href="./contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
