Used Beautifier. on css code. Altered div class-container on index and about.html pages. On project two I altered the col-6 to col-8 for the div class on line 33.

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -10,8 +10,7 @@
     <link rel="stylesheet" href="../CSS/Style.css">
     <title>DanielHarman.About</title>
 </head>
-<div class="container">
-  <header>
+<body class="container">
     <div class="row">
       <header>
           <nav>
