--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <title>DanielHarman.Portfolio</title>
 </head>
 <body>
-<div class=".container">
+<div class="container">
     <div class="row">
         <header>
             <nav>
                 <div class="col-lg-auto">
-                <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
+                    <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
                 </div>
                 <div class="col-lg-auto">                   
                 <ul>
