Renamed files as per style guide

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,7 +16,7 @@
             <nav>
                 <div class="col-lg-auto">
                 <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
-                </div>
+                </div> test
                 <div class="col-lg-auto">                   
                 <ul>
                      <li class="about"><a href="Pages/About.html">About</a></li>
