Renamed file names in code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--source this -->
 <!--need to do meta data things-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>DanielHarman.Portfolio</title>
 </head>
 <body>
@@ -22,8 +22,8 @@
                 </div>
                 <div class="col-lg-auto">                   
                 <ul>
-                     <li class="about"><a href="Pages/About.html">About</a></li>
-                    <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                     <li class="about"><a href="pages/about.html">About</a></li>
+                    <li class="contact"><a href="pages/contact.html">Contact</a></li>
                 </ul>
                 </div>
             </nav>
@@ -38,19 +38,19 @@
             <div class="row justify-content-lg-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project one.html"><img src="assets/singular coral vase, red glaze, white backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
+                        <a href="pages/project-one.html"><img src="assets/singular coral vase, red glaze, white backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
                         <h3>Project One</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project two.html"><img src="assets/two ceramic white mugs.jpg" alt="A photograph of two ceramic mugs."></a>
+                        <a href="pages/project-two.html"><img src="assets/two ceramic white mugs.jpg" alt="A photograph of two ceramic mugs."></a>
                         <h3>Project Two</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="ijhfkslnd"></a>
+                        <a href="pages/project-three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="ijhfkslnd"></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="Pages/Project four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml"></a>
+                        <a href="pages/project-four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml"></a>
                         <h3>Project Four</h3>
                     </div>
                     </div>
