--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
     <meta name="description" content="About the person page for ceramic artist">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>DanielHarman.About</title>
 </head>
 <body class="container">
