--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
     <meta name="description" content="Contact page for ceramic artist">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/Style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>DanielHarman.Contact</title>
 </head>
 <body class="container">
@@ -19,8 +19,8 @@
                 </div> test
                 <div class="col-lg-auto">                   
                 <ul>
-                     <li class="about"><a href="Pages/About.html">About</a></li>
-                    <li class="contact"><a href="Pages/Contact.html">Contact</a></li>
+                     <li class="about"><a href="pages/about.html">About</a></li>
+                    <li class="contact"><a href="pages/contact.html">Contact</a></li>
                 </ul>
                 </div>
             </nav>
