Added appropriate aria-labels.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="ijhfkslnd"></a>
+                        <a href="pages/project-three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="A blue vase with a flower arrangement on a white backdrop"></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml"></a>
+                        <a href="pages/project-four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="A organic abstract vase in a shiney black vase."></a>
                         <h3>Project Four</h3>
                     </div>
                     </div>
