--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
             <nav>
                 <div class="col-lg-auto">
                 <h1><a href="index.html" class="signature">Daniel Harman</a></h1> 
-                </div> test
+                </div>
                 <div class="col-lg-auto">                   
                 <ul>
                     <li class="about"><a href="pages/about.html">About</a></li>
@@ -31,7 +31,7 @@
     </div>
      <div class="row">
         <div class="col">
-            <p>For commissions, inquiries, or to learn more about upcoming exhibitions, please contact</p>
+            <p>For purchasing information, general inquiries, or to learn more about upcoming exhibitions, please fill out the contact form.</p>
         </div>
      </div>
     <!--Creating form-->
@@ -39,13 +39,13 @@
     <div class="col">
     <form method="post" action="https://formdump.codeinstitute.net" aria-label="">
         <label for="fname"></label>
-        <input class="cform" type="text" id="fname" name="fname" placeholder="First Name">
+        <input class="cform" type="text" id="fname" name="fname" placeholder="First Name" aria-label="input for first name">
         <label for="sname"></label>
-        <input class="cform" type="text" id="sname" name="sname" placeholder="Surname">
+        <input class="cform" type="text" id="sname" name="sname" placeholder="Surname" aira-label="input for surname">
         <label for="email"></label>
-        <input class="cform" type="email" id="email" name="email" placeholder="Email">
+        <input class="cform" type="email" id="email" name="email" placeholder="Email" aria-label="input for email address">
         <label for="add-info"></label>
-        <textarea class="cform" id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information" required></textarea>
+        <textarea class="cform" id="add-info" name="add-info" rows="15" cols="45" placeholder="Further Information" required aria-label="input for additional information"></textarea>
         <label for="submit"></label>
         <input class="cform" type="submit" value="Submit">
     </form>
