--- a/pages/project-three.html
+++ b/pages/project-three.html
@@ -48,17 +48,17 @@
         <div class="row">
             <div class="col-lg-2">
                 <div class="three-image">
-                    <img src="../assets/blue vase with flower arrangement on a white backdrop.jpg" alt="">
+                    <img src="../assets/blue vase with flower arrangement on a white backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a white backdrop.">
                 </div>
             </div>
             <div class="col-lg-5">
                 <div class="three-image">
-                    <img src="../assets/blue vase, cover photo.jpg" alt="">
+                    <img src="../assets/blue vase, cover photo.jpg" alt="A blue vase against a white backdrop.">
                 </div>
             </div>
             <div class="col-lg-3">
                 <div class="three-image">
-                    <img src="../assets/blue vase with flowers on a grey backdrop.jpg" alt=""> 
+                    <img src="../assets/blue vase with flowers on a grey backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a grey backdrop."> 
                 </div>
             </div>
         </div>
