--- a/pages/project-one.html
+++ b/pages/project-one.html
@@ -47,19 +47,19 @@
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/singular coral vase, red glaze, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/singular coral vase, red glaze, white backdrop.jpg" alt="A singular coral style vase in a red glaze positioned against a white backdrop.">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/large coral style design vase, green glaze, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/large coral style design vase, green glaze, white backdrop.jpg" alt="A large coral style vase in a green glaze against a white backdrop.">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/singular small coral vase, green, white backdrop.jpg" alt="lhfasnk.dmlk'fjosg;nkfaeml">
+                        <img src="../assets/singular small coral vase, green, white backdrop.jpg" alt="A singular small coral vase in a green glaze positioned against a white backdrop.">
                     </div>
                 </div>
     </main>
