Edited image names reducing spaces between. Validated all code using validator. Removed floating div's.

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Kathryn Sims">
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
@@ -14,7 +14,7 @@
 <body class="container">
     <div class="row">
       <!--Creating Header-->
-      <header>
+    <header>
           <nav>
               <div class="col-lg-auto">
               <h1><a href="../index.html" class="signature">Daniel Harman</a></h1> 
@@ -25,14 +25,14 @@
                   <li class="contact"><a href="./contact.html">Contact</a></li>
               </ul>
               </div>
-          </nav>
-        </div>      
-  </header>
+          </nav>      
+    </header>
+    </div>
     <!--This is the main content of the page-->
   <main>
     <div class="row">
       <div class="col-lg-6">
-      <img class="profile" src="../assets/profile picture.jpg" alt="Profile photograph of Daniel Harman">
+      <img class="profile" src="../assets/profile-picture.jpg" alt="Profile photograph of Daniel Harman">
       </div>
       <div class="col-lg-6">
         <aside class="Exhibition">
@@ -60,10 +60,7 @@
         </p>
         </div>
       </div>
-    </main>
-  <div class="row">
-   
-  </div>
+  </main>
    <!--Creating Footer-->
   <footer>
     <div class="row">
