--- a/pages/project-one.html
+++ b/pages/project-one.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kathryn Sims">
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
@@ -42,26 +42,27 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/singular medium coral vase, green glaze, white backdrop.jpg" alt="Single medium coral style vase in a green glaze and on a white backdrop.">
+                        <img src="../assets/singular-medium-coral-vase-green-glaze-white-backdrop.jpg" alt="Single medium coral style vase in a green glaze and on a white backdrop.">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/singular coral vase, red glaze, white backdrop.jpg" alt="A singular coral style vase in a red glaze positioned against a white backdrop.">
+                        <img src="../assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg" alt="A singular coral style vase in a red glaze positioned against a white backdrop.">
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/large coral style design vase, green glaze, white backdrop.jpg" alt="A large coral style vase in a green glaze against a white backdrop.">
+                        <img src="../assets/large-coral-style-design-vase-green-glaze-white-backdrop.jpg" alt="A large coral style vase in a green glaze against a white backdrop.">
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4">
                     <div class="one-image">
-                        <img src="../assets/singular small coral vase, green, white backdrop.jpg" alt="A singular small coral vase in a green glaze positioned against a white backdrop.">
+                        <img src="../assets/singular-small-coral-vase-green-white-backdrop.jpg" alt="A singular small coral vase in a green glaze positioned against a white backdrop.">
                     </div>
                 </div>
+            </div>    
     </main>
      <!--Creating Footer-->
     <footer>
