--- a/pages/project-two.html
+++ b/pages/project-two.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kathryn Sims">
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
@@ -46,17 +46,17 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="two-image">
-                        <img src="https://images.unsplash.com/photo-1525972757199-cf2ad7cc4f4b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of two cups arranged together.">
+                        <img src="../assets/two-ceramic-white-mugs.jpg" alt="A photograph of two cups arranged together.">
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="two-image">
-                        <img src="https://images.unsplash.com/photo-1525974160448-038dacadcc71?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="A photograph of three ceramic vessels.">
+                        <img src="../assets/one-tall-and-two-short-ceramic-vessels-white-glaze.jpg" alt="A photograph of three ceramic vessels.">
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div class="two-image">
-                        <img src="https://images.unsplash.com/photo-1523367662635-ec427c441fe6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNlcmFtaWNzfGVufDB8fDB8fHww" alt="A photograph of several small milk jugs grouped together.">
+                        <img src="../assets/small-round-white-ceramic-pot-on-white-backdrop.jpg" alt="A small white ceramic pot on a white backdrop.">
                     </div>
                 </div>
             </div>
