--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kathryn Sims">
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-lg-auto">                   
                 <ul>
-                     <li class="about"><a href="pages/about.html">About</a></li>
+                    <li class="about"><a href="pages/about.html">About</a></li>
                     <li class="contact"><a href="pages/contact.html">Contact</a></li>
                 </ul>
                 </div>
@@ -33,25 +33,25 @@
     <main>
         <div class="row justify-content-center">
             <div class="col-lg-auto">
-                <img id="cover" src="assets/blue vase, cover photo.jpg" alt="photograph of a blue vase">
+                <img id="cover" src="assets/blue-vase-cover-photo.jpg" alt="photograph of a blue vase">
             </div>
-            </div> 
+            
             <div class="row justify-content-lg-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-one.html"><img src="assets/singular coral vase, red glaze, white backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
+                        <a href="pages/project-one.html"><img src="assets/singular-medium-coral-vase-red-glaze-white-backdrop.jpg" alt="A photograph of a organic red ceramic vase"></a>
                         <h3>Project One</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-two.html"><img src="assets/two ceramic white mugs.jpg" alt="A photograph of two ceramic mugs."></a>
+                        <a href="pages/project-two.html"><img src="assets/two-ceramic-white-mugs.jpg" alt="A photograph of two ceramic mugs."></a>
                         <h3>Project Two</h3>
                     </div>
                 </div>
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-three.html"><img src="assets/blue vase with flower arrangement on a white backdrop.jpg" alt="A blue vase with a flower arrangement on a white backdrop"></a>
+                        <a href="pages/project-three.html"><img src="assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg" alt="A blue vase with a flower arrangement on a white backdrop"></a>
                         <h3>Project Three</h3>
                     </div>
                 </div>
@@ -59,13 +59,13 @@
             <div class="row justify-content-center">
                 <div class="col-lg-auto">
                     <div class="landing">
-                        <a href="pages/project-four.html"><img src="assets/organic abstract vase in black shiney glaze.jpg" alt="A organic abstract vase in a shiney black vase."></a>
+                        <a href="pages/project-four.html"><img src="assets/organic-abstract-vase-in-black-shiney-glaze.jpg" alt="A organic abstract vase in a shiney black vase."></a>
                         <h3>Project Four</h3>
                     </div>
                     </div>
                 </div>
-            </div>        
              
+        </div>           
     </main>
      <!--Creating Footer-->    
     <footer>
@@ -76,7 +76,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
                     <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
                 <!--instagram logo from bootstrap
-                THIS NEEDS TO BE _BLANK LINKED--->
+                THIS NEEDS TO BE _BLANK LINKED-->
                 </svg>
                 </a>
             </div>    
