--- a/pages/project-three.html
+++ b/pages/project-three.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Kathryn Sims">
     <meta name="keywords" content="Portfolio, Ceramics, Fine Art">
@@ -48,17 +48,17 @@
         <div class="row">
             <div class="col-lg-2">
                 <div class="three-image">
-                    <img src="../assets/blue vase with flower arrangement on a white backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a white backdrop.">
+                    <img src="../assets/blue-vase-with-flower-arrangement-on-a-white-backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a white backdrop.">
                 </div>
             </div>
             <div class="col-lg-5">
                 <div class="three-image">
-                    <img src="../assets/blue vase, cover photo.jpg" alt="A blue vase against a white backdrop.">
+                    <img src="../assets/blue-vase-cover-photo.jpg" alt="A blue vase against a white backdrop.">
                 </div>
             </div>
             <div class="col-lg-3">
                 <div class="three-image">
-                    <img src="../assets/blue vase with flowers on a grey backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a grey backdrop."> 
+                    <img src="../assets/blue-vase-with-flowers-on-a-grey-backdrop.jpg" alt="A medium size blue vase containing a flower arrangement positioned against a grey backdrop."> 
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
         </svg>
     </a>
     <p>Copyright</p>
-</div>  
+  
 </footer>
 <!--Javascript link below is from Bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
