Fixed page centering on index and project three page. Moved container class on index page to the body tag. Implemented container class tag on project three page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>DanielHarman.Portfolio</title>
 </head>
-<body>
-<div class="container">
+<body class="container">
     <div class="row">
         <!--Creating Header-->
         <header>
@@ -84,8 +83,7 @@
         </div>  
     </footer>
     <!--Javascript link below is from Bootstrap-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</div>     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>     
 </body>
 </html>
 
