--- a/pages/project-three.html
+++ b/pages/project-three.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <title>DanielHarman.ProjectThree</title>
 </head>
-<body>
+<body class="container">
     <div class="row">
         <!--Creating Header-->
         <header>
