Add aria-label to instagram logo on each page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -75,7 +75,7 @@
   <footer>
     <div class="row">
       <div class="col">
-        <a href="https://www.instagram.com/" target="_blank">
+        <a href="https://www.instagram.com/" target="_blank" aria-label="instagram logo, click to be taken to instagram in a new page.">
           <!--Instagram logo code below is from Bootstrap-->
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
             viewBox="0 0 16 16">
